Vertical alignments of the columns were flakey, fixing the same to top.

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -56,6 +56,7 @@
 
         background-color: @table-bg;
 
+        vertical-align: top;
         overflow: hidden;
         display: inline-block;
         min-width: 150px;
